# rotary-phone-audio-guestbook

./: .gitignore  010_audio-guestbook-led  99-mem-gpio.rules  CLAUDE.md  DEPLOYMENT_GUIDE.md  FEATURE_SUMMARY.md  GREETING_MANAGEMENT_IMPLEMENTATION.md  LICENSE  NOTIFICATION_SYSTEM_SPEC.md  OPENAI_ENHANCEMENTS.md  OPENAI_IMPLEMENTATION_PLAN.md  OPENAI_INTEGRATION_SUMMARY.md  README.md  RECORDING_FILTERING.md  REFACTORING_PLAN.md  WARP.md  WIFI_MANAGEMENT.md  audioGuestBook.service  audioGuestBookWebServer.service  bootLed.service  config.yaml  config.yaml.template  deploy.sh  pi-mount.sh  pyproject.toml  requirements.txt  rsync-exclude.txt  start_server.sh  sync-to-pi.sh  test.txt
docs/: AI_PROCESSING_FIXES.md  DEPENDENCY_MANAGEMENT.md  README.md  hardware.md  security.md  software.md  wifi.md
scripts/: README.md  add-wifi  configure-wifi-sudo.sh  install-helper-scripts.sh  merge_config.py  merge_config_remote.sh  sync-from-pi.sh
src/: audioGuestBook.py  audioInterface.py  bootLed.py
webserver/: connectivity_checker.py  greeting_state_manager.py  job_queue.py  metadata_manager.py  openai_processor.py  package.json  server.py  tailwind.config.js  wifi_manager.py
webserver/static/css/: custom.css  output.css  output.min.css  tailwind.css
webserver/static/js/: recordings.js  theme.js
webserver/templates/: base.html  config.html  index.html  login.html
