[project]
name = "rotary-phone-audio-guestbook"
version = "3.4.0"
description = "AI-powered audio guestbook using vintage rotary phone - automatic transcription, speaker detection, emotional categorization, and modern web interface"
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = [
    "flask>=3.0.3",
    "gevent>=24.11.1",
    "gpiozero>=2.0.1",
    "gunicorn>=23.0.0",
    "psutil>=5.9.4",
    "ruamel-yaml>=0.18.6",
    "openai>=1.0.0",
    "requests>=2.31.0",
]
